--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,5 @@
-name: Deploy Astro site to GitHub Pages
+name: Deploy Astro site to Git artifact named `github-pages`. Here's how you can modify your workflow file:
+
 
 on:
   push:
@@ -7,38 +8,74 @@ on:
 permissions:
   contents: read
   pages: write
-  id-token: write
+  id-token: writegithub/workflows/deploy.yml`)
+```yaml
+name: Deploy Astro site to GitHub Pages
+
+on:
+  push:
+    branches: [
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Build Astro project
-        run: npm run build
-
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v2
-        with:
-          path: ./dist
-          
   deploy:
-    needs: build
     runs-on: ubuntu-latest
     environment:
       name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+      url: $main]
+
+permissions:
+  contents: read
+  pages: write
+{{ steps.deployment.outputs.page_url }}
     steps:
+  id-token: write
+
+jobs:
+  deploy:
+    runs-on: ubuntu-latest      - name: Checkout
+        uses: actions/checkout@
+    environment:
+      name: github-pages
+      urlv4
+
+      - name: Setup Node
+        uses: actions/setup: ${{ steps.deployment.outputs.page_url }}
+    steps-node@v4
+        with:
+          node-version: :
+      - name: Checkout
+        uses: actions/checkout@20
+
+      - name: Install dependencies
+        run: npmv4
+
+      - name: Setup Node
+        uses ci
+
+      - name: Build with Astro
+        run: npm: actions/setup-node@v4
+        with:
+          node-version: run build
+
+      # Upload the artifact
+      - name: Upload 20
+
+      - name: Install dependencies
+        run: artifact
+        uses: actions/upload-artifact npm ci
+
+      - name: Build with Astro
+        run:@v4
+        with:
+          name: github-pages
+ npm run build
+
+      # Add this step to upload build output          path: ./dist # Replace './dist' with the actual build as an artifact
+      - name: Upload artifact
+ output directory
+
       - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+        uses: actions/deploy-pages@        uses: actions/upload-artifact@v4
+        with:
+          name: github-pages
+          path: dist
