--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,81 +1,90 @@
-name: Deploy Astro site to Git artifact named `github-pages`. Here's how you can modify your workflow file:
-
+# Sample workflow for building and deploying an Astro site to GitHub Pages
+#
+# To get started with Astro see: https://docs.astro.build/en/getting-started/
+#
+name: Deploy Astro site to Pages
 
 on:
+  # Runs on pushes targeting the default branch
   push:
-    branches: [main]
+    branches: ["main"]
 
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
   pages: write
-  id-token: writegithub/workflows/deploy.yml`)
-```yaml
-name: Deploy Astro site to GitHub Pages
-
-on:
-  push:
-    branches: [
-
-jobs:
-  deploy:
-    runs-on: ubuntu-latest
-    environment:
-      name: github-pages
-      url: $main]
-
-permissions:
-  contents: read
-  pages: write
-{{ steps.deployment.outputs.page_url }}
-    steps:
   id-token: write
 
+# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
+# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
+
+env:
+  BUILD_PATH: "." # default value when not using subfolders
+  # BUILD_PATH: subfolder
+
 jobs:
+  build:
+    name: Build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Detect package manager
+        id: detect-package-manager
+        run: |
+          if [ -f "${{ github.workspace }}/yarn.lock" ]; then
+            echo "manager=yarn" >> $GITHUB_OUTPUT
+            echo "command=install" >> $GITHUB_OUTPUT
+            echo "runner=yarn" >> $GITHUB_OUTPUT
+            echo "lockfile=yarn.lock" >> $GITHUB_OUTPUT
+            exit 0
+          elif [ -f "${{ github.workspace }}/package.json" ]; then
+            echo "manager=npm" >> $GITHUB_OUTPUT
+            echo "command=ci" >> $GITHUB_OUTPUT
+            echo "runner=npx --no-install" >> $GITHUB_OUTPUT
+            echo "lockfile=package-lock.json" >> $GITHUB_OUTPUT
+            exit 0
+          else
+            echo "Unable to determine package manager"
+            exit 1
+          fi
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+          cache: ${{ steps.detect-package-manager.outputs.manager }}
+          cache-dependency-path: ${{ env.BUILD_PATH }}/${{ steps.detect-package-manager.outputs.lockfile }}
+      - name: Setup Pages
+        id: pages
+        uses: actions/configure-pages@v5
+      - name: Install dependencies
+        run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
+        working-directory: ${{ env.BUILD_PATH }}
+      - name: Build with Astro
+        run: |
+          ${{ steps.detect-package-manager.outputs.runner }} astro build \
+            --site "${{ steps.pages.outputs.origin }}" \
+            --base "${{ steps.pages.outputs.base_path }}"
+        working-directory: ${{ env.BUILD_PATH }}
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: ${{ env.BUILD_PATH }}/dist
+
   deploy:
-    runs-on: ubuntu-latest      - name: Checkout
-        uses: actions/checkout@
     environment:
       name: github-pages
-      urlv4
-
-      - name: Setup Node
-        uses: actions/setup: ${{ steps.deployment.outputs.page_url }}
-    steps-node@v4
-        with:
-          node-version: :
-      - name: Checkout
-        uses: actions/checkout@20
-
-      - name: Install dependencies
-        run: npmv4
-
-      - name: Setup Node
-        uses ci
-
-      - name: Build with Astro
-        run: npm: actions/setup-node@v4
-        with:
-          node-version: run build
-
-      # Upload the artifact
-      - name: Upload 20
-
-      - name: Install dependencies
-        run: artifact
-        uses: actions/upload-artifact npm ci
-
-      - name: Build with Astro
-        run:@v4
-        with:
-          name: github-pages
- npm run build
-
-      # Add this step to upload build output          path: ./dist # Replace './dist' with the actual build as an artifact
-      - name: Upload artifact
- output directory
-
+      url: ${{ steps.deployment.outputs.page_url }}
+    needs: build
+    runs-on: ubuntu-latest
+    name: Deploy
+    steps:
       - name: Deploy to GitHub Pages
-        uses: actions/deploy-pages@        uses: actions/upload-artifact@v4
-        with:
-          name: github-pages
-          path: dist
+        id: deployment
+        uses: actions/deploy-pages@v4
