--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portaf",
+  "name": "tarealabtaller",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -9,6 +9,9 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/mdx": "^4.2.6",
+    "@astrojs/rss": "^4.0.11",
+    "@astrojs/sitemap": "^3.4.0",
     "astro": "^5.7.13"
   }
 }
